welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
	if ((day==1 || day==2 ||day==3 || day==4 ||day==5)&& vacation == false ){return "7:00"}
        ^